--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>&#60;3 Liam</title>
 
-    <link rel="stylesheet" href="assets/style.css">
-    <link rel="shortcut icon" href="assets/img/favicon.webp" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.honest.wtf/assets/style.css">
+    <link rel="shortcut icon" href="https://cdn.honest.wtf/assets/img/favicon.webp" type="image/x-icon">
     
 
     <title>Liam</title>
@@ -20,23 +20,23 @@
     <meta name="msapplication-TileColor" content="#8d97a1"/>
 
     <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://cockbin.lol/Liam"/>
+    <meta property="og:url" content="https://myth.rip/Liam"/>
     <meta property="og:title" content="Liam*"/>
     <meta property="og:description" content="You never really remember the beginning of a dream do you? You always wind up right in the middle of what's going on. So how did we end up here?"/>
-    <meta property="og:image" content="https://cdn.cockbin.lol/media/img/cmd.png"/>
+    <meta property="og:image" content="https://cdn.honest.wtf//media/img/cmd.png"/>
 
     <meta property="twitter:card" content="summary_large_image"/>
-    <meta property="twitter:url" content="https://cockbin.lol/Liam"/>
+    <meta property="twitter:url" content="https://myth.rip/Liam"/>
     <meta property="twitter:title" content="Liam*"/>
     <meta property="twitter:description" content="You never really remember the beginning of a dream do you? You always wind up right in the middle of what's going on. So how did we end up here?"/>
-    <meta property="twitter:image" content="https://cdn.cockbin.lol/media/img/cmd.png"/>
+    <meta property="twitter:image" content="https://cdn.honest.wtf//media/img/cmd.png"/>
 
 </head>
 
 <body>
 
     <div class="enter">
-        <img src="assets/img/eye-open.svg">
+        <img src="https://cdn.honest.wtf/assets/img/eye-open.svg">
     </div>
 
     
@@ -47,7 +47,7 @@
                 <img class="card1-pfp" src="" alt="Avatar">
                 <div class="statusWrap">
                     <span>Millionare at 18</span>
-                    <img class="status" src="assets/img/status.svg">
+                    <img class="status" src="https://cdn.honest.wtf/assets/img/status.svg">
                 </div>
                 <svg class="dev" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 24 24" style="enable-background:new 0 0 24 24;" xml:space="preserve">
                     <style type="text/css">
@@ -79,20 +79,20 @@
 
             </div>
             <div class="sicons">
-                <a target="_blank" href="https://t.me/liam_hm"><img src="assets/img/tg.svg"></a>
+                <a target="_blank" href="https://t.me/liam_hm"><img src="https://cdn.honest.wtf/assets/img/tg.svg"></a>
             </div>
         </div>
     </div>
 
     <div class="overlay"></div>
-    <video id="Liamski" src="assets/source.mp4" autoplay muted loop playsinline></video>
-    <audio id="mainAudio" src="assets/audio.mp3" loop></audio>
-    <audio id="devAudio" src="assets/audio.mp3" loop></audio>
+    <video id="Liamski" src="https://cdn.honest.wtf/assets/source.mp4" autoplay muted loop playsinline></video>
+    <audio id="mainAudio" src="https://cdn.honest.wtf/assets/audio.mp3" loop></audio>
+    <audio id="devAudio" src="https://cdn.honest.wtf/assets/audio.mp3" loop></audio>
     <canvas id="c"></canvas>
 
 
     <script type="text/javascript" src="https://res.cloudinary.com/veseylab/raw/upload/v1684982764/magicmouse-2.0.0.cdn.min.js"></script>
-    <script src="assets/Liam.js"></script>
+    <script src="https://cdn.honest.wtf/assets/liam.js"></script>
 
     <script>
     function _0x620a(_0x45baac,_0x2432c1){const _0xb6a8f5=_0x24fa();return _0x620a=function(_0x3ff64d,_0x4890b8){_0x3ff64d=_0x3ff64d-0x187;let _0x3f14d5=_0xb6a8f5[_0x3ff64d];return _0x3f14d5;},_0x620a(_0x45baac,_0x2432c1);}function _0x40ff38(_0x579056,_0x4e1e79){return _0x620a(_0x579056-0x3aa,_0x4e1e79);}(function(_0x562bc8,_0x5f1d16){const _0x333bc8=_0x562bc8();function _0x6772e9(_0x41076f,_0x418df0){return _0x620a(_0x418df0-0x3a6,_0x41076f);}while(!![]){try{const _0x4edf92=parseInt(_0x6772e9(0x555,0x556))/0x1*(-parseInt(_0x6772e9(0x54b,0x549))/0x2)+-parseInt(_0x6772e9(0x541,0x552))/0x3*(-parseInt(_0x6772e9(0x53d,0x536))/0x4)+parseInt(_0x6772e9(0x528,0x537))/0x5*(parseInt(_0x6772e9(0x555,0x542))/0x6)+-parseInt(_0x6772e9(0x555,0x54f))/0x7*(parseInt(_0x6772e9(0x543,0x53d))/0x8)+-parseInt(_0x6772e9(0x547,0x533))/0x9*(parseInt(_0x6772e9(0x51a,0x52e))/0xa)+-parseInt(_0x6772e9(0x547,0x545))/0xb*(parseInt(_0x6772e9(0x521,0x535))/0xc)+-parseInt(_0x6772e9(0x553,0x546))/0xd*(-parseInt(_0x6772e9(0x52a,0x530))/0xe);if(_0x4edf92===_0x5f1d16)break;else _0x333bc8['push'](_0x333bc8['shift']());}catch(_0x40a72a){_0x333bc8['push'](_0x333bc8['shift']());}}}(_0x24fa,0xef419),API_URL=_0x40ff38(0x555,0x569),USERID=_0x40ff38(0x544,0x536));async function fetchResponse(_0x17a855){function _0x591631(_0x4f6b29,_0x310c4c){return _0x40ff38(_0x310c4c- -0x4a1,_0x4f6b29);}try{const _0x68a384=await fetch(API_URL+_0x591631(0x97,0x9d)+_0x17a855),_0x266d9f=await _0x68a384[_0x591631(0x94,0xa2)]();return _0x266d9f;}catch(_0x16d4f3){console[_0x591631(0x94,0x97)](_0x16d4f3);}}function _0x24fa(){const _0x16bc64=['56496PleNji','233384LPVPwl','762145IDBTmc','card1','action','/users/','length','gger','8dyDBJN','{}.constructor(\x22return\x20this\x22)(\x20)','json','1078022531652538389','input','6qmMnvt','return\x20(function()\x20','debu','429BpFLYD','4459052dPdzhX','stateObject','src','1839038LfsEKP','avatar','https://cdn.discordapp.com/embed/avatars/1.png','while\x20(true)\x20{}','-pfp','init','2462026QXmYVI','constructor','https://api.lanyard.rest/v1','57vKiXRb','data','apply','string','1BMVVVN','https://cdn.discordapp.com/avatars/','30EFMXhN','function\x20*\x5c(\x20*\x5c)','56dmOMks','getElementsByClassName','discord_user','594531lSfNBl','error'];_0x24fa=function(){return _0x16bc64;};return _0x24fa();}async function setAvatar(_0x5143b0,_0x4126e6){const _0x33edcd=(function(){let _0x220a21=!![];return function(_0x2c826c,_0x3641b5){const _0x114356=_0x220a21?function(){function _0x20dd3d(_0x4cc08c,_0x4231e0){return _0x620a(_0x4231e0-0x3a1,_0x4cc08c);}if(_0x3641b5){const _0x24e06c=_0x3641b5[_0x20dd3d(0x542,0x54f)](_0x2c826c,arguments);return _0x3641b5=null,_0x24e06c;}}:function(){};return _0x220a21=![],_0x114356;};}());(function(){_0x33edcd(this,function(){const _0x21b0d5=new RegExp(_0x43fb8f(-0x1f7,-0x1f8)),_0x236b6c=new RegExp('\x5c+\x5c+\x20*(?:[a-zA-Z_$][0-9a-zA-Z_$]*)','i');function _0x43fb8f(_0x34af61,_0x455ea4){return _0x620a(_0x455ea4- -0x381,_0x34af61);}const _0x41f957=_0x3ff64d(_0x43fb8f(-0x1e9,-0x1d9));!_0x21b0d5['test'](_0x41f957+'chain')||!_0x236b6c['test'](_0x41f957+_0x43fb8f(-0x1e8,-0x1e6))?_0x41f957('0'):_0x3ff64d();})();}());function _0x1574f9(_0x2696e7,_0x20ce35){return _0x40ff38(_0x20ce35- -0x5ec,_0x2696e7);}const _0x21fc17=await fetchResponse(_0x5143b0);var _0xbee0fe=_0x21fc17[_0x1574f9(-0x80,-0x95)][_0x1574f9(-0xbf,-0xb6)][_0x1574f9(-0xa2,-0x9e)],_0x539fdd=_0x1574f9(-0xaa,-0xbb)+_0x5143b0+'/'+_0xbee0fe;_0x21fc17[_0x1574f9(-0x9f,-0x95)][_0x1574f9(-0xbd,-0xb6)][_0x1574f9(-0x9c,-0x9e)]?document[_0x1574f9(-0xac,-0xb7)](_0x4126e6+_0x1574f9(-0x9f,-0x9b))[0x0][_0x1574f9(-0x9b,-0xa0)]=_0x539fdd:document[_0x1574f9(-0xae,-0xb7)](_0x4126e6+'-pfp')[0x0][_0x1574f9(-0x9b,-0xa0)]=_0x1574f9(-0x99,-0x9d);}(function(){const _0x4cd7cc=function(){let _0x4aea0b;try{_0x4aea0b=Function(_0x5b7570(-0x1c8,-0x1bd)+_0x5b7570(-0x1cd,-0x1ba)+');')();}catch(_0x54c56a){_0x4aea0b=window;}function _0x5b7570(_0x275773,_0x203ed8){return _0x620a(_0x275773- -0x365,_0x203ed8);}return _0x4aea0b;},_0xe800b2=_0x4cd7cc();_0xe800b2['setInterval'](_0x3ff64d,0x2710);}()),setAvatar(USERID,_0x40ff38(0x53c,0x535));function _0x3ff64d(_0x46e811){function _0x41ec76(_0x367226){function _0x577e3e(_0x37ae7d,_0x29c734){return _0x620a(_0x29c734-0x101,_0x37ae7d);}if(typeof _0x367226===_0x577e3e(0x2bd,0x2b0))return function(_0x4b812a){}[_0x577e3e(0x2ad,0x2ab)](_0x577e3e(0x2ba,0x2a7))[_0x577e3e(0x2a3,0x2af)]('counter');else(''+_0x367226/_0x367226)[_0x577e3e(0x297,0x296)]!==0x1||_0x367226%0x14===0x0?function(){return!![];}[_0x577e3e(0x2aa,0x2ab)](_0x577e3e(0x292,0x29f)+'gger')['call'](_0x577e3e(0x28a,0x294)):function(){return![];}[_0x577e3e(0x298,0x2ab)](_0x577e3e(0x298,0x29f)+_0x577e3e(0x29b,0x297))['apply'](_0x577e3e(0x2ac,0x2a2));_0x41ec76(++_0x367226);}try{if(_0x46e811)return _0x41ec76;else _0x41ec76(0x0);}catch(_0x4544ce){}}
